# compression-tool

./: README.md  pyproject.toml  run_huffman_tests.py
huffman_cli/: cli.py  codes.py  frequency.py  io.py  tree.py
huffman_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/compressed/: medium.txt.huff  small.txt.huff
tests/raw/: small.txt
